Phriction: fix issue with icons in table of contents on wide screens
Summary:
When using icons in front of a header title, a part of the icon was
not visible in the TOC on wide screens.

| Before    | After    |
|-----------|----------|
| {F2670860}|{F2670861}|

Look at the table of contents on the left side.

Closes T15920

Test Plan:
Steps to reproduce in a Phriction document:

```
== {icon users} How to Register-in ==

=== {icon heart spin} Credits ===
```

Verify if all icons are visible in TOC.

Reviewers: O1 Blessed Committers, aklapper, valerio.bozzolan

Reviewed By: O1 Blessed Committers, aklapper, valerio.bozzolan

Subscribers: aklapper, tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15920

Differential Revision: https://we.phorge.it/D25854

--- a/webroot/rsrc/css/phui/phui-document-pro.css
+++ b/webroot/rsrc/css/phui/phui-document-pro.css
@@ -171,7 +171,9 @@ body.printable {
   white-space: nowrap;
 }
 
-.phui-document-view-pro .phui-document-toc-content a:hover {
+.phui-document-view-pro .phui-document-toc-content a:hover,
+.phui-document-view-pro .phui-document-toc-content a:hover
+span.visual-only.phui-icon-view.phui-font-fa.fa-users {
   color: {$anchor};
   text-decoration: underline;
 }
@@ -376,5 +378,10 @@ body.printable {
     white-space: break-spaces;
     text-indent: -10px;
     padding-left: 10px;
+  }
+
+  div.phui-document-view-pro div.phui-document-toc-content
+  span.visual-only.phui-icon-view.phui-font-fa {
+    text-indent: 0px;
   }
 }
